Fix for sidebar ad overflow (MF-450)

--- a/wp-content/themes/makerfaire/css/style.css
+++ b/wp-content/themes/makerfaire/css/style.css
@@ -806,11 +806,11 @@ tr.time {
 }
 #div-gpt-ad-664089004995786621-2 {
   width: 300px;
-  height: 250px;
+  height: auto;
 }
 #div-gpt-ad-664089004995786621-3 {
   width: 300px;
-  height: 250px;
+  height: auto;
 }
 #div-gpt-ad-664089004995786621-4 {
   width: 728px;
