--- a/wp-content/themes/makerfaire/less/navigation.less
+++ b/wp-content/themes/makerfaire/less/navigation.less
@@ -9,13 +9,13 @@
 // First sidebar ad (top)
 #div-gpt-ad-664089004995786621-2 {
 	width:300px; 
-	height:250px;
+	height:auto;
 }
 
 // Second sidebar 
 #div-gpt-ad-664089004995786621-3 {
 	width:300px;
-	height:250px;
+	height:auto;
 }
 
 // footer ad
